# test_task_5

./: .gitignore  README.md  main.py  pyproject.toml  settings.py
readme/: TEST_ASSIGNMENT.md
src/: data_handler.py  database.py  exceptions.py  project_dataclasses.py
