[tool.poetry]
name = "test-task-5"
version = "0.1.0"
description = ""
authors = ["mrKazzila <mrkazzila@gmail.com>"]
readme = "README.md"
packages = [{include = "test_task_5"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
